@@ -14,6 +14,9 @@
   *    to a target
   *  - Added new TemperatureDataLogger application, a USB data logger which writes to the device's dataflash and appears to
   *    the host as a standard Mass Storage device when inserted
+  *  - Added MIDI event packing support to the MIDI Device and Host mode Class drivers, allowing for multiple MIDI events to
+  *    sent or received in packed form in a single USB packet
+  *  - Added new MIDI send buffer flush routines to the MIDI Device and Host mode Class drivers, to flush packed events
   *
   *  <b>Changed:</b>
   *  - Slowed down bit-banged PDI programming in the AVRISP project slightly to prevent transmission errors
